Fix List LDAP metadata